--- a/Clash/Force_Proxy.yaml
+++ b/Clash/Force_Proxy.yaml
@@ -1,13 +1,13 @@
 payload:
   # > Force_Proxy
   ### 强制指定节点
-  - DOMAIN-KEYWORD,suisei.cc
-  - DOMAIN-SUFFIX,exhentai.org
-  - DOMAIN-SUFFIX,e-hentai.org
-  - DOMAIN-SUFFIX,hath.network
+  - '+.suisei.cc'
+  - '+.exhentai.org'
+  - '+.e-hentai.org'
+  - '+.hath.network'
   ### 博客相关
-  - DOMAIN-SUFFIX,disq.us
-  - DOMAIN-SUFFIX,disquscdn.com
-  - DOMAIN-SUFFIX,disqus.com
-  - DOMAIN-SUFFIX,syndication.twitter.com
-  - DOMAIN-SUFFIX,platform.twitter.com
+  - '+.disq.us'
+  - '+.disquscdn.com'
+  - '+.disqus.com'
+  - '+.syndication.twitter.com'
+  - '+.platform.twitter.com'
