--- a/subconverter/custom.ini
+++ b/subconverter/custom.ini
@@ -39,8 +39,8 @@ custom_proxy_group=🇰🇷 韩国节点`select`(KR|Korea|KOR|首尔|韩|韓)
 custom_proxy_group=🎥 奈飞节点`select`(NF|奈飞|解锁|Netflix|NETFLIX|Media)
 ;设置分组标志位
 
-enable_rule_generator=true
-overwrite_original_rules=true
+;enable_rule_generator=true
+;overwrite_original_rules=true
 
 ;clash_rule_base=https://raw.githubusercontent.com/lhie1/Rules/master/Clash/Rule.yaml
 
