--- a/Clash/Force_Proxy.yaml
+++ b/Clash/Force_Proxy.yaml
@@ -1,10 +1,11 @@
 payload:
   # > Force_Proxy
-  ### 强制指定节点
+  ### 强制走节点
   - '+.suisei.cc'
   - '+.exhentai.org'
   - '+.e-hentai.org'
   - '+.hath.network'
+  - '+.onedrive.live.com'
   ### 博客相关
   - '+.disq.us'
   - '+.disquscdn.com'
