--- a/Clash/JPN_Media.yaml
+++ b/Clash/JPN_Media.yaml
@@ -13,7 +13,11 @@ payload:
   - DOMAIN-KEYWORD,NHK
   - DOMAIN-KEYWORD,spwn
   - DOMAIN-KEYWORD,abema
-  - DOMAIN-KEYWORD,tver
+  ### Tver
+  - DOMAIN-SUFFIX,tver.jp
+  - DOMAIN-SUFFIX,amazonaws.com
+  - DOMAIN-SUFFIX,yahoo.co.jp
+  - DOMAIN-SUFFIX,brightcove.com
   ### Pixiv Inc.
   - DOMAIN-SUFFIX,pixiv.net
   - DOMAIN-SUFFIX,pixivsketch.net
