--- a/.github/workflows/purge.yml
+++ b/.github/workflows/purge.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Get Script
       run: |
         wget https://raw.githubusercontent.com/aozaki-kuro/ruleset/main/.github/workflows/purge.py
-        wget 
+        wget https://raw.githubusercontent.com/aozaki-kuro/ruleset/main/.github/workflows/jsdelivr_dl.py
         pip install requests
         chmod +x purge.py jsdelivr_dl.py
         
