--- a/.github/workflows/purge.yml
+++ b/.github/workflows/purge.yml
@@ -15,6 +15,8 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Tar and Hash
+      env:
+        ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
       run: |
         tar -cvf git.tar *.yaml
         echo "::set-env name=GITMD5::`md5sum git.tar | awk '{ print $1 }'`"
