--- a/JPN_Media.yaml
+++ b/JPN_Media.yaml
@@ -7,7 +7,7 @@ payload:
   - DOMAIN-SUFFIX,rakuten.co.jp
   - DOMAIN-SUFFIX,sanrio.co.jp
   - DOMAIN-SUFFIX,amazon.co.jp
-  ### 流媒体分流
+  ### 流媒体分流（关键词）
   - DOMAIN-KEYWORD,NHK
   - DOMAIN-KEYWORD,spwn
   - DOMAIN-KEYWORD,abema
