--- a/Clash/JPN_Geo.yaml
+++ b/Clash/JPN_Geo.yaml
@@ -1,5 +1,5 @@
 payload:
-  # > JPN_Media
+  # > JPN_Geo
   ### 锁区商店
   - DOMAIN-SUFFIX,ototoy.jp
   - DOMAIN-SUFFIX,dmm.co.jp
@@ -7,10 +7,6 @@ payload:
   - DOMAIN-SUFFIX,rakuten.co.jp
   - DOMAIN-SUFFIX,sanrio.co.jp
   - DOMAIN-SUFFIX,amazon.co.jp
-  ### 流媒体分流（关键词）
-  - DOMAIN-KEYWORD,NHK
-  - DOMAIN-KEYWORD,spwn
-  - DOMAIN-KEYWORD,abema
   ### skeb
   - DOMAIN-KEYWORD,skeb.jp
   ### Amazon Lightsail Tokyo
