--- a/Clash/JPN_Geo.yaml
+++ b/Clash/JPN_Geo.yaml
@@ -7,6 +7,7 @@ payload:
   - DOMAIN-SUFFIX,rakuten.co.jp
   - DOMAIN-SUFFIX,sanrio.co.jp
   - DOMAIN-SUFFIX,amazon.co.jp
+  - DOMAIN-KEYWORD,melonbooks
   ### skeb
   - DOMAIN-KEYWORD,skeb.jp
   ### Amazon Lightsail Tokyo
