--- a/Clash/JPN_Native.yaml
+++ b/Clash/JPN_Native.yaml
@@ -3,4 +3,6 @@ payload:
   ### 需家宽IP的锁区流媒体
   - DOMAIN-SUFFIX,mora.jp
   - DOMAIN-KEYWORD,asahi
+  ### Amazon Lightsail Tokyo
+  - IP-CIDR,35.73.212.185/32
   
