--- a/Clash/JPN_Geo.yaml
+++ b/Clash/JPN_Geo.yaml
@@ -8,6 +8,7 @@ payload:
   - DOMAIN-SUFFIX,sanrio.co.jp
   - DOMAIN-SUFFIX,amazon.co.jp
   - DOMAIN-KEYWORD,melonbooks
+  - DOMAIN-SUFFIX,booth.pm
   ### Capcom
   - DOMAIN-SUFFIX,capcom-netcatcher.com
   - IP-CIDR,210.168.181.48/29
