--- a/Clash/JPN_Geo.yaml
+++ b/Clash/JPN_Geo.yaml
@@ -13,4 +13,6 @@ payload:
   - DOMAIN-SUFFIX,capcom-netcatcher.com
   - IP-CIDR,210.168.181.48/29
   ### skeb
-  - DOMAIN-KEYWORD,skeb.jp
+  - DOMAIN-SUFFIX,skeb.jp
+  - DOMAIN-SUFFIX,skeb-avatar.imgix.net
+  - DOMAIN-SUFFIX,skeb.imgix.net
