--- a/subconverter/custom.ini
+++ b/subconverter/custom.ini
@@ -19,11 +19,11 @@ custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🚀 手动切
 custom_proxy_group=🇭🇰 香港节点`select`(港|HK|Hong Kong)
 custom_proxy_group=🇯🇵 日本节点`select`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)
 custom_proxy_group=🇯🇵 日本家宽`select`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)
-custom_proxy_group=🇺🇲 美国节点`select`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)
+custom_proxy_group=🇺🇲 美国节点`select`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|USA|United States)
 custom_proxy_group=🇸🇬 狮城节点`select`(新加坡|坡|狮城|SG|Singapore)
 custom_proxy_group=🇨🇳 台湾节点`select`(台|新北|彰化|TW|Taiwan)
-custom_proxy_group=💰 低倍率节点`select`(emby|实验性)
-custom_proxy_group=🎈 特殊节点`select`(印度|India|阿根廷|俄罗苏|Russia|RUS)
+custom_proxy_group=💰 低倍率节点`select`(emby|实验性|0.1)
+custom_proxy_group=🎈 特殊节点`select`(印度|India|阿根廷|俄罗斯|Russia|RUS)
 ;设置分组标志位
 
 enable_rule_generator=true
