--- a/Clash/Force_Direct.yaml
+++ b/Clash/Force_Direct.yaml
@@ -5,3 +5,7 @@ payload:
   - DOMAIN-SUFFIX,uptodate.com
   #- DOMAIN-SUFFIX,tenso.com
   - DOMAIN-SUFFIX,time.is
+  ### 应用程序直连
+  - PROCESS-NAME,Resilio Sync.exe
+  - PROCESS-NAME,QQ.exe
+  - PROCESS-NAME,QQApp.exe
