--- a/Clash/Force_Direct.yaml
+++ b/Clash/Force_Direct.yaml
@@ -1,7 +1,7 @@
 payload:
   # > Force_Direct
   ### 强制直连
-  - DOMAIN-SUFFIX,sharepoint.com
+  #- DOMAIN-SUFFIX,sharepoint.com
   - DOMAIN-SUFFIX,uptodate.com
   #- DOMAIN-SUFFIX,tenso.com
   - DOMAIN-SUFFIX,time.is
