--- a/Clash/Force_Direct.yaml
+++ b/Clash/Force_Direct.yaml
@@ -5,5 +5,6 @@ payload:
   - DOMAIN-SUFFIX,uptodate.com
   #- DOMAIN-SUFFIX,tenso.com
   - DOMAIN-SUFFIX,time.is
+  - DOMAIN-SUFFIX,yacd.haishan.me
   ### 应用程序直连
   - PROCESS-NAME,Resilio Sync.exe
