--- a/Clash/Custom_Direct.yaml
+++ b/Clash/Custom_Direct.yaml
@@ -3,6 +3,7 @@ payload:
   ### 强制直连
   - DOMAIN-SUFFIX,uptodate.com
   - DOMAIN-SUFFIX,time.is
+  - DOMAIN-SUFFIX,yacd.haishan.me
   ### 应用程序直连
   - PROCESS-NAME,Resilio Sync.exe
   ### BT
