--- a/Clash/Custom_JPN_Native.yaml
+++ b/Clash/Custom_JPN_Native.yaml
@@ -3,6 +3,8 @@ payload:
   ### 需家宽IP的锁区流媒体
   - DOMAIN-SUFFIX,mora.jp
   - DOMAIN-KEYWORD,asahi
+  - DOMAIN-KEYWORD,abema
+  - DOMAIN-KEYWORD,NHK
   - DOMAIN-SUFFIX,tenso.com
   ### Amazon Lightsail Tokyo
   - IP-CIDR,3.114.96.96/32
