--- a/Clash/Custom_JPN_Store.yaml
+++ b/Clash/Custom_JPN_Store.yaml
@@ -1,11 +1,10 @@
 payload:
   # > JPN_Store
-  ### 锁区商店
+  ### 音乐商店
   - DOMAIN-SUFFIX,ototoy.jp
   - DOMAIN-SUFFIX,dmm.co.jp
   - DOMAIN-SUFFIX,dlsite.com
   - DOMAIN-SUFFIX,rakuten.co.jp
-  - DOMAIN-SUFFIX,sanrio.co.jp
   - DOMAIN-SUFFIX,amazon.co.jp
   - DOMAIN-KEYWORD,melonbooks
   - DOMAIN-SUFFIX,booth.pm
@@ -15,6 +14,9 @@ payload:
   - DOMAIN-SUFFIX,toranoana.jp
   - DOMAIN-SUFFIX,hmv.co.jp
   - DOMAIN-SUFFIX,items-store.jp
+  ### Bushiroad
+  - DOMAIN-SUFFIX,bushiroad-store.com
+  - DOMAIN-SUFFIX,bushiroad.com
   ### Capcom
   - DOMAIN-SUFFIX,capcom-netcatcher.com
   - IP-CIDR,210.168.181.48/29
@@ -22,3 +24,5 @@ payload:
   - DOMAIN-SUFFIX,skeb.jp
   - DOMAIN-SUFFIX,skeb-avatar.imgix.net
   - DOMAIN-SUFFIX,skeb.imgix.net
+  ### Other
+  - DOMAIN-SUFFIX,sanrio.co.jp
