--- a/Clash/Custom_US_Only.yaml
+++ b/Clash/Custom_US_Only.yaml
@@ -2,6 +2,8 @@ payload:
   # > US_Only
   ### 强制指定节点
   - DOMAIN-SUFFIX,yande.re
+  - DOMAIN-SUFFIX,nih.gov
+  - DOMAIN-KEYWORD,pubmed
   ### 服务器与存储相关分流
   - DOMAIN-SUFFIX,backblaze.com
   - DOMAIN-SUFFIX,backblazeb2.com
