--- a/Clash/Custom_iTunes.yaml
+++ b/Clash/Custom_iTunes.yaml
@@ -2,3 +2,5 @@ payload:
   # > Proxy_iTunes
   ### 强制走节点
   - DOMAIN-KEYWORD,itunes.apple.com
+  - DOMAIN-KEYWORD,upp.itunes.apple.com
+  - DOMAIN-KEYWORD,ssl.mzstatic.com
