--- a/Clash/Custom_Direct.yaml
+++ b/Clash/Custom_Direct.yaml
@@ -3,7 +3,7 @@ payload:
   ### 强制直连
   - DOMAIN-SUFFIX,uptodate.com
   - DOMAIN-SUFFIX,time.is
-  - DOMAIN-SUFFIX,safebrowsing.googleapis.com,DIRECT
+  - DOMAIN-SUFFIX,safebrowsing.googleapis.com
   ### 时间服务
   - DOMAIN-SUFFIX,time.apple.com
   - DOMAIN-SUFFIX,time.asia.apple.com
