--- a/subconverter/custom.ini
+++ b/subconverter/custom.ini
@@ -22,7 +22,7 @@ custom_proxy_group=🇯🇵 日本家宽`select`(日本|川日|东京|大阪|泉
 custom_proxy_group=🇺🇲 美国节点`select`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|USA|United States)
 custom_proxy_group=🇸🇬 狮城节点`select`(新加坡|坡|狮城|SG|Singapore)
 custom_proxy_group=🇨🇳 台湾节点`select`(台|新北|彰化|TW|Taiwan)
-custom_proxy_group=💰 低倍率节点`select`(emby|实验性|0.1|日本高级)
+custom_proxy_group=💰 低倍率节点`select`(emby|实验性)
 custom_proxy_group=🎈 特殊节点`select`(印度|India|俄罗斯|Russia|RUS|巴西|Brazil|Argentina|阿根廷|AR)
 ;设置分组标志位
 
