--- a/Clash/Custom_JPN_Store.yaml
+++ b/Clash/Custom_JPN_Store.yaml
@@ -32,3 +32,4 @@ payload:
   - DOMAIN-SUFFIX,sanrio.co.jp
   - DOMAIN-SUFFIX,ec-project.jp
   - DOMAIN-SUFFIX,chugai-contents.jp
+  - DOMAIN-SUFFIX,chugaionline.xyz
