--- a/subconverter/custom_surge.ini
+++ b/subconverter/custom_surge.ini
@@ -1,4 +1,5 @@
 ruleset=🐟 漏网之鱼,[]FINAL
+custom_proxy_group=🇭🇰 香港节点,https://cdn.jsdelivr.net/gh/aozaki-kuro/ruleset@main/Surge/Custom_JPN_Pixiv.list
 
 custom_proxy_group=🚀 节点选择`select`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]💰 低倍率节点`[]🎈 特殊节点`[]🚀 手动切换`[]DIRECT
 custom_proxy_group=🚀 手动切换`select`.*
@@ -26,5 +27,5 @@ custom_proxy_group=💰 低倍率节点`select`(emby|实验性)
 custom_proxy_group=🎈 特殊节点`select`(印度|India|俄罗斯|Russia|RUS|巴西|Brazil|Argentina|阿根廷|AR)
 ;设置分组标志位
 
-enable_rule_generator=false
+enable_rule_generator=true
 overwrite_original_rules=false
