--- a/subconverter/custom_surge.ini
+++ b/subconverter/custom_surge.ini
@@ -1,5 +1,7 @@
 ;surge_ruleset=🐟 漏网之鱼,[]FINAL
 
+ruleset=🇭🇰 香港节点,https://cdn.jsdelivr.net/gh/aozaki-kuro/ruleset@main/Surge/Custom_JPN_Pixiv.list
+
 custom_proxy_group=🚀 节点选择`select`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]💰 低倍率节点`[]🎈 特殊节点`[]🚀 手动切换`[]DIRECT
 custom_proxy_group=🚀 手动切换`select`.*
 custom_proxy_group=📲 电报消息`select`[]🚀 节点选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]💰 低倍率节点`[]🚀 手动切换`[]DIRECT
