--- a/subconverter/custom_surge.ini
+++ b/subconverter/custom_surge.ini
@@ -17,7 +17,7 @@ ruleset=📹 油管视频,https://cdn.jsdelivr.net/gh/aozaki-kuro/ruleset@main/S
 ruleset=📹 油管视频,https://cdn.jsdelivr.net/gh/lhie1/Rules@master/Surge/Surge%203/Provider/Media/YouTube.list
 ruleset=📹 油管视频,https://cdn.jsdelivr.net/gh/lhie1/Rules@master/Surge/Surge%203/Provider/Media/YouTube%20Music.list
 ruleset=📺 哔哩哔哩,https://cdn.jsdelivr.net/gh/lhie1/Rules@master/Surge/Surge%203/Provider/Media/Bilibili.list
-ruleset=🌍 国外媒体,https://cdn.jsdelivr.net/gh/lhie1/Rules@master/Surge/Surge%203/Provider/Media/Abema%20TV.list,
+ruleset=🌍 国外媒体,https://cdn.jsdelivr.net/gh/lhie1/Rules@master/Surge/Surge%203/Provider/Media/Abema%20TV.list
 ruleset=🌍 国外媒体,https://cdn.jsdelivr.net/gh/lhie1/Rules@master/Surge/Surge%203/Provider/Media/Amazon.list
 ruleset=🌍 国外媒体,https://cdn.jsdelivr.net/gh/lhie1/Rules@master/Surge/Surge%203/Provider/Media/Apple$20News.list
 ruleset=🌍 国外媒体,https://cdn.jsdelivr.net/gh/lhie1/Rules@master/Surge/Surge%203/Provider/Media/Apple%20TV.list
