--- a/subconverter/custom_surge.ini
+++ b/subconverter/custom_surge.ini
@@ -1,37 +1,37 @@
-surge_ruleset=🇭🇰 香港节点,https://raw.githubusercontent.com/aozaki-kuro/ruleset/main/Surge/Custom_JPN_Pixiv.list
-surge_ruleset=🇯🇵 日本节点,https://raw.githubusercontent.com/aozaki-kuro/ruleset/main/Surge/Custom_JPN_Niconico.list
-surge_ruleset=🇯🇵 日本节点,https://raw.githubusercontent.com/aozaki-kuro/ruleset/main/Surge/Custom_JPN_Radio.list
-surge_ruleset=🌍 国外媒体,https://raw.githubusercontent.com/aozaki-kuro/ruleset/main/Surge/Custom_JPN_Media_Misc.list
-surge_ruleset=🇯🇵 日本家宽,https://raw.githubusercontent.com/aozaki-kuro/ruleset/main/Surge/Custom_JPN_TVer.list
-surge_ruleset=🇯🇵 日本节点,https://raw.githubusercontent.com/aozaki-kuro/ruleset/main/Surge/Custom_JPN_Store.list
-surge_ruleset=🇯🇵 日本家宽,https://raw.githubusercontent.com/aozaki-kuro/ruleset/main/Surge/Custom_JPN_Native.list
-surge_ruleset=🇺🇲 美国节点,https://raw.githubusercontent.com/aozaki-kuro/ruleset/main/Surge/Custom_US_Only.list
-surge_ruleset=💰 低倍率节点,https://raw.githubusercontent.com/aozaki-kuro/ruleset/main/Surge/Custom_DL.list
-surge_ruleset=🚀 节点选择,https://raw.githubusercontent.com/aozaki-kuro/ruleset/main/Surge/Custom_Proxy.list
-surge_ruleset=🍎 苹果服务,https://raw.githubusercontent.com/aozaki-kuro/ruleset/main/Surge/Custom_iTunes.list
-surge_ruleset=DIRECT,https://raw.githubusercontent.com/aozaki-kuro/ruleset/main/Surge/Custom_Direct.list
-surge_ruleset=REJECT,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Reject.list
-surge_ruleset=DIRECT,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Special.list
-surge_ruleset=🌍 国外媒体,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/Spotify.list
-surge_ruleset=📹 油管视频,https://raw.githubusercontent.com/aozaki-kuro/ruleset/main/Surge/Custom_YouTube.list
-surge_ruleset=📹 油管视频,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/YouTube.list
-surge_ruleset=📹 油管视频,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/YouTube%20Music.list
-surge_ruleset=📺 哔哩哔哩,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/Bilibili.list
-surge_ruleset=🌍 国外媒体,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/Abema%20TV.list
-surge_ruleset=🌍 国外媒体,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/Amazon.list
-surge_ruleset=📺 巴哈姆特,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/Bahamut.list
-surge_ruleset=🌍 国外媒体,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/Pornhub.list
-surge_ruleset=📲 电报消息,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Telegram.list
-surge_ruleset=🎮 游戏平台,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Steam.list
-surge_ruleset=🚀 节点选择,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Speedtest.list
-surge_ruleset=🚀 节点选择,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/PayPal.list
-surge_ruleset=Ⓜ️ 微软服务,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Microsoft.list
-surge_ruleset=🚀 节点选择,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Proxy.list
-surge_ruleset=🍎 苹果服务,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Apple.list
-surge_ruleset=🚀 节点选择,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Scholar.list
-surge_ruleset=DIRECT,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Domestic.list
-surge_ruleset=DIRECT,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Domestic%20IPs.list
-surge_ruleset=GEOIP,CN,[]DIRECT
+ruleset=🇭🇰 香港节点,https://raw.githubusercontent.com/aozaki-kuro/ruleset/main/Surge/Custom_JPN_Pixiv.list
+ruleset=🇯🇵 日本节点,https://raw.githubusercontent.com/aozaki-kuro/ruleset/main/Surge/Custom_JPN_Niconico.list
+ruleset=🇯🇵 日本节点,https://raw.githubusercontent.com/aozaki-kuro/ruleset/main/Surge/Custom_JPN_Radio.list
+ruleset=🌍 国外媒体,https://raw.githubusercontent.com/aozaki-kuro/ruleset/main/Surge/Custom_JPN_Media_Misc.list
+ruleset=🇯🇵 日本家宽,https://raw.githubusercontent.com/aozaki-kuro/ruleset/main/Surge/Custom_JPN_TVer.list
+ruleset=🇯🇵 日本节点,https://raw.githubusercontent.com/aozaki-kuro/ruleset/main/Surge/Custom_JPN_Store.list
+ruleset=🇯🇵 日本家宽,https://raw.githubusercontent.com/aozaki-kuro/ruleset/main/Surge/Custom_JPN_Native.list
+ruleset=🇺🇲 美国节点,https://raw.githubusercontent.com/aozaki-kuro/ruleset/main/Surge/Custom_US_Only.list
+ruleset=💰 低倍率节点,https://raw.githubusercontent.com/aozaki-kuro/ruleset/main/Surge/Custom_DL.list
+ruleset=🚀 节点选择,https://raw.githubusercontent.com/aozaki-kuro/ruleset/main/Surge/Custom_Proxy.list
+ruleset=🍎 苹果服务,https://raw.githubusercontent.com/aozaki-kuro/ruleset/main/Surge/Custom_iTunes.list
+ruleset=DIRECT,https://raw.githubusercontent.com/aozaki-kuro/ruleset/main/Surge/Custom_Direct.list
+ruleset=REJECT,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Reject.list
+ruleset=DIRECT,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Special.list
+ruleset=🌍 国外媒体,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/Spotify.list
+ruleset=📹 油管视频,https://raw.githubusercontent.com/aozaki-kuro/ruleset/main/Surge/Custom_YouTube.list
+ruleset=📹 油管视频,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/YouTube.list
+ruleset=📹 油管视频,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/YouTube%20Music.list
+ruleset=📺 哔哩哔哩,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/Bilibili.list
+ruleset=🌍 国外媒体,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/Abema%20TV.list
+ruleset=🌍 国外媒体,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/Amazon.list
+ruleset=📺 巴哈姆特,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/Bahamut.list
+ruleset=🌍 国外媒体,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/Pornhub.list
+ruleset=📲 电报消息,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Telegram.list
+ruleset=🎮 游戏平台,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Steam.list
+ruleset=🚀 节点选择,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Speedtest.list
+ruleset=🚀 节点选择,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/PayPal.list
+ruleset=Ⓜ️ 微软服务,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Microsoft.list
+ruleset=🚀 节点选择,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Proxy.list
+ruleset=🍎 苹果服务,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Apple.list
+ruleset=🚀 节点选择,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Scholar.list
+ruleset=DIRECT,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Domestic.list
+ruleset=DIRECT,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Domestic%20IPs.list
+ruleset=GEOIP,CN,[]DIRECT
 
 custom_proxy_group=🚀 节点选择`select`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]💰 低倍率节点`[]🎈 特殊节点`[]🚀 手动切换`[]DIRECT
 custom_proxy_group=🚀 手动切换`select`.*
