--- a/Clash/Custom_JPN_Native.yaml
+++ b/Clash/Custom_JPN_Native.yaml
@@ -36,6 +36,9 @@ payload:
   ### Capcom
   - DOMAIN-SUFFIX,capcom-netcatcher.com
   - IP-CIDR,210.168.181.48/29
+  
+  ### 其他商店
+  - DOMAIN-SUFFIX,converse-tokyo.jp
 
   ### skeb
   - DOMAIN-SUFFIX,skeb.jp
