--- a/Clash/Custom_Proxy.yaml
+++ b/Clash/Custom_Proxy.yaml
@@ -6,6 +6,7 @@ payload:
   - DOMAIN-SUFFIX,e-hentai.org
   - DOMAIN-SUFFIX,hath.network
   - DOMAIN-SUFFIX,onedrive.live.com
+  - DOMAIN-SUFFIX,jsdelivr.net
   - IP-CIDR,1.1.1.1/32
   - IP-CIDR,1.0.0.1/32
   ### 博客相关
